# ProjectAtlas

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
OWiseOpenGL/: OWiseOpenGL.vcxproj  OWiseOpenGL.vcxproj.filters  Shader.h  Shader.hpp  glad.c  main.cpp
OWiseOpenGL/header/: camera.h
OWiseOpenGL/src/: main.cpp
include/: application.h  application_vk.h  bindings.h  buffer_vk.h  camera.h  chunk_data.h  chunk_draw_list.h  chunk_entry.h  chunk_manager.h  chunk_mesh.h  chunk_mesh_data.h  chunk_mesh_gpu_gl.h  chunk_mesh_gpu_vk.h  chunk_opaque_pass_gl.h  chunk_opaque_pass_vk.h  chunk_pass_gl.h  chunk_pass_vk.h  chunkdata.h  chunkmanager.h  chunkmesh.h  composite_pass_vk.h  constants.h  crosshair.h  crosshair_vk.h  cubemap.h  cubemap_gl.h  cubemap_vk.h  data.h  debug_pass.h  debug_pass_vk.h  debugpass.h  descriptor_set_vk.h  fog_pass.h  fog_pass_vk.h  fogpass.h  frame_context_vk.h  fxaa_pass.h  fxaa_pass_vk.h  fxaapass.h  gbuffer_pass.h  (+59 more)
lessons_of_old/: OWiseOpenGL.sln  OWiseOpenGL.vcxproj
res/: convert_spv.py
res/shader/: helper.glsl
src/: application.cpp  camera.cpp  chunkdata.cpp  chunkmanager.cpp  chunkmesh.cpp  cubemap.cpp  main.cpp  shader.cpp
src/chunk/: chunk_data.cpp  chunk_manager.cpp  chunk_mesh.cpp  chunk_mesh_gpu_gl.cpp  chunk_mesh_gpu_vk.cpp  chunkdata.cpp  chunkmanager.cpp  chunkmesh.cpp
src/core/: application.cpp  application_vk.cpp  scene.cpp  scene_vk.cpp
src/inspector/: inspector.cpp  light_inspector.cpp
src/light/: light.cpp  light_gl.cpp  light_vk.cpp
src/main_opengl/: opengl_main.cpp
src/main_vulkan/: buffer_vk.cpp  descriptor_set_vk.cpp  graphics_pipeline_vk.cpp  ray_tracing_pipeline_vk.cpp  shader_binding_table_vk.cpp  vulkan_main.cpp
src/player/: crosshair.cpp  crosshair_vk.cpp
src/renderer/: chunk_opaque_pass_gl.cpp  debug_pass.cpp  debugpass.cpp  fog_pass.cpp  fogpass.cpp  fxaa_pass.cpp  fxaapass.cpp  gbuffer_pass.cpp  gbufferpass.cpp  present_pass.cpp  presentpass.cpp  renderer.cpp  renderer_vk.cpp  ssao_pass.cpp  ssaopass.cpp  water_pass.cpp  waterpass.cpp
src/save/: save.cpp
src/system/: camera.cpp
(+112 files in other folders)
